--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <section class="bgimg">
 	<article class="py-5 text-center" id="contact_info">
 		<div class="text-white contact_info">
-			<h3 class="display-4">+(91)90359*****</h3>
+			<h1 class="">+(91)90359*****</h1>
 			<p>this is my personal number</p>
 			<button class="btn btn-primary">contact us</button>
 		</div>
@@ -197,7 +197,7 @@
 <section class="bgimg">
 	<article class="text-capitalize py-5" id="register">
 		<div class="container-fluid text-center contact_info ">
-			<h3 class="display-4 text-white ">how to join us</h3>
+			<h1 class=" text-white ">how to join us</h1>
 			<p class="text-white" >we are fetching data from the world</p>
 			<button class="btn btn-primary" data-toggle="modal" data-target="#myModal">get started</button>
 		</div>
